Fix layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,33 +14,34 @@
 
 /* Local font files (committed into /assets/fonts) */
 @font-face{
-  font-family: "Essay";
-  src: url("{{ '/assets/fonts/eb-garamond-v32-latin-regular.woff2' | relative_url }}") format("woff2");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
+  font-family:"Essay";
+  src:url("../fonts/eb-garamond-v32-latin-regular.woff2") format("woff2");
+  font-weight:400;
+  font-style:normal;
+  font-display:swap;
 }
 @font-face{
-  font-family: "Essay";
-  src: url("{{ '/assets/fonts/eb-garamond-v32-latin-italic.woff2' | relative_url }}") format("woff2");
-  font-weight: 400;
-  font-style: italic;
-  font-display: swap;
+  font-family:"Essay";
+  src:url("../fonts/eb-garamond-v32-latin-italic.woff2") format("woff2");
+  font-weight:400;
+  font-style:italic;
+  font-display:swap;
 }
 @font-face{
-  font-family: "Essay";
-  src: url("{{ '/assets/fonts/eb-garamond-v32-latin-600.woff2' | relative_url }}") format("woff2");
-  font-weight: 600;
-  font-style: normal;
-  font-display: swap;
+  font-family:"Essay";
+  src:url("../fonts/eb-garamond-v32-latin-600.woff2") format("woff2");
+  font-weight:600;
+  font-style:normal;
+  font-display:swap;
 }
 @font-face{
-  font-family: "Essay";
-  src: url("{{ '/assets/fonts/eb-garamond-v32-latin-600italic.woff2' | relative_url }}") format("woff2");
-  font-weight: 600;
-  font-style: italic;
-  font-display: swap;
+  font-family:"Essay";
+  src:url("../fonts/eb-garamond-v32-latin-600italic.woff2") format("woff2");
+  font-weight:600;
+  font-style:italic;
+  font-display:swap;
 }
+
 
 html{
   background: var(--bg);
